# muse

./: .coveragerc  .cruft.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yaml  .ruff.toml  .sourcery.yaml  AGENTS.md  CHANGELOG.rst  MANIFEST.in  README.rst  _typos.toml  pyproject.toml  pytest.ini  tox.ini
.circleci/: codecov_upload.sh  config.yml
.github/workflows/: ci.yaml  ci.yml  sub_package_update.yaml  sub_package_update.yml
changelog/: 39.feature.rst  41.breaking.rst  41.feature.rst  42.breaking.rst  42.feature.rst  43.doc.rst  43.removal.rst  44.trivial.rst  46.feature.rst  47.bugfix.rst  48.breaking.rst  49.feature.rst  50.breaking.rst  50.doc.rst  51.feature.rst  53.bugfix.rst  53.feature.rst  53.trivial.rst  54.feature.1.rst  54.feature.rst  55.breaking.rst  55.removal.rst  56.breaking.rst  56.bugfix.rst  56.doc.rst  56.trivial.rst  58.doc.rst  README.rst
docs/: Makefile  changelog.rst  conf.py  contributing.rst  design.rst  index.rst  known_issues.rst  muse.rst  nitpick-exceptions
docs/reference/: index.rst  instr.rst  instrument.rst  muse.rst  synthesis.rst  transforms.rst  utils.rst
docs/tutorial/: index.rst  installation.rst
examples/: README.txt  example_test.py
examples/how_to/: 00_create_vdem.py  01_vdem_to_muse_fov.py  README.txt  create_vdem.py
examples/other_instruments/: README.txt  skip_aia_94_response.py  skip_aia_94_synthesis.py  skip_eis_fe_xii_response.py  skip_eis_fe_xii_synthesis.py  skip_euvst_fe_x_response.py  skip_euvst_fe_x_synthesis.py
examples/synthesis_tutorial/: 02_vdem_to_muse_fov.py  04_create_sg_responses.py  05_synthesize_muse_observation.py  06_analyze_synthetic_spectra.py  07_density_and_nonthermal_responses.py  README.txt  skip_01_create_vdem.py  skip_02_vdem_to_muse_fov.py  skip_03_prepare_chianti_line_lists.py  skip_04_create_sg_responses.py  skip_05_synthesize_muse_observation.py
licenses/: LICENSE.rst
muse/: __init__.py  conftest.py  example_mod.py  log.py  variables.py  variables_schema.py  version.py
muse/_dev/: __init__.py  migrate_response.py
muse/_dev/tests/: test_migrate_response.py
muse/example_subpkg/: __init__.py
muse/instr/: __init__.py  gausslobes.py
muse/instr/tests/: test_figures.py  test_gausslobes.py
muse/instrument/: __init__.py  linelist.py  migrate_response.py  migration.py  response.py  spectral.py  utils.py
muse/instrument/tests/: test_figures.py  test_linelist.py  test_migrate_response.py  test_migration.py  test_response.py  test_spectral.py  test_utils.py
muse/synthesis/: __init__.py  _backends.py  synthesis.py  utils.py
muse/synthesis/tests/: test_backends.py  test_figures.py  test_synthesis.py  test_utils.py
muse/tests/: figure_hashes_mpl_3108_ft_261_astropy_720.json  figure_hashes_mpl_3109_ft_261_astropy_720.json  helpers.py  test_documentation.py  test_example.py  test_figures.py  test_helpers.py  test_variables.py
muse/transforms/: __init__.py  transforms.py
muse/transforms/tests/: test_figures.py  test_transforms.py
muse/utils/: __init__.py  documentation.py  utils.py
muse/utils/tests/: test_utils.py
