[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
  "extension-helpers",
  "numpy>=2.0.0",
  "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "muse"
description = "A library to analyze and reduce data from the MUSE Mission."
requires-python = ">=3.12"
readme = { file = "README.rst", content-type = "text/x-rst" }
license-files = ["licenses/LICENSE.rst"]
authors = [
  { name = "MUSE Instrument Team", email = "nfreij@seti.org" },
]
dependencies = [
  'astropy>=7.2.0',
  'dask[array]>=2026.1.2',
  'numpy>2.0',
  'scikit-learn>=1.8.0',
  'skglm>=0.5',
  'scipy>=1.17.1',
  'tqdm>=4.67.3',
  'xarray[parallel,io]>=2026.2.0',
  'loguru>=0.7.3',
  "torch>=2.10.0",
  # These should be removed in the future
  "GPUtil-fix",
  "py-cpuinfo",
  "psutil",
]
dynamic = ["version"]

[project.scripts]
open_astronomy_package_template_example = "muse.example_mod:main"

[project.optional-dependencies]
all = ["muse"]
tests = [
  'pytest-astropy',
  'pytest-loguru',
]
docs = [
  'pydata-sphinx-theme',
  "default_values",
  "joblib", # for sphinx-gallery parallel
  "packaging",
  "sphinx-autodoc-typehints",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx",
  "sphinxext-opengraph",
]
dev = ["muse[all,tests,docs]"]

[project.urls]
Homepage = "https://muse.lmsal.com"
"Source Code" = "https://github.com/LM-SAL/muse"
Download = "https://pypi.org/project/muse"
Documentation = "https://docs.muse.org"
"Issue Tracker" = "https://github.com/LM-SAL/muse/issues/"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["muse*"]
exclude = ["muse._dev*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]

[tool.setuptools_scm]
version_file = "muse/_version.py"

[tool.gilesbot]
  [tool.gilesbot.pull_requests]
  enabled = true

  [tool.gilesbot.towncrier_changelog]
  enabled = true
  verify_pr_number = true
  changelog_skip_label = "No Changelog Entry Needed"
  help_url = "https://github.com/LM-SAL/muse/blob/main/changelog/README.rst"

  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/LM-SAL/muse/blob/main/changelog/README.rst)."

  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/LM-SAL/muse/blob/main/changelog/README.rst)"

  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "muse"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com/LM-SAL/muse/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
