[project]
name = "muse"
description = "A library to analyze and reduce data from the MUSE Mission."
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.12"
license-files = ["licenses/LICENSE.rst"]
authors = [
  { name = "MUSE Instrument Team", email = "nfreij@seti.org" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
urls.Documentation = "https://muse-lmsal.readthedocs.io/en/latest/"
urls.Download = "https://pypi.org/project/muse"
urls.Homepage = "https://muse.lmsal.com"
urls."Issue Tracker" = "https://github.com/LM-SAL/muse/issues/"
urls."Source Code" = "https://github.com/LM-SAL/muse"
dependencies = [
  "astropy>=7.2",
  "attrs>=26.1.0",
  "loguru>=0.7.3",
  "numpy>=2.4.0",
  "tqdm>=4.67",
  "xarray[io,parallel]>=2026.4.0",
]
optional-dependencies.all = ["muse[chianti,torch]"]
optional-dependencies.chianti = [
  "ChiantiPy>=0.15.0",
  "numexpr>=2.14",
  "periodictable",
]
optional-dependencies.dev = ["muse[all,docs,tests]", "setuptools-scm"]
optional-dependencies.docs = [
  "muse",
  "matplotlib>=3.10.0",
  "memory_profiler", # for sphinx-gallery memory usage
  "packaging",
  "plasmacalcs[most]",
  "pooch",
  "pydata-sphinx-theme",
  "sphinx-autodoc-typehints",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx",
  "sphinxext-opengraph",
  "tabulate",
]
optional-dependencies.tests = [
  "muse[all]",
  "matplotlib>=3.10.0",
  "pytest-doctestplus",
  "pytest-loguru",
  "pytest-mpl",
  "pytest-remotedata",
  "pytest",
]
optional-dependencies.torch = ["torch>=2.12.0"]
dynamic = ["version"]

[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools-scm[toml]>=8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.gilesbot]
pull_requests.enabled = true
towncrier_changelog.enabled = true
towncrier_changelog.verify_pr_number = true
towncrier_changelog.changelog_skip_label = "No Changelog Entry Needed"
towncrier_changelog.help_url = "https://github.com/LM-SAL/muse/blob/main/changelog/README.rst"
towncrier_changelog.changelog_missing_long = """\
  There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory \
  following the instructions in the changelog [README](https://github.com/LM-SAL/muse/blob/main/changelog/README.rst).\
  """
towncrier_changelog.type_incorrect_long = """\
  The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog \
  [README](https://github.com/LM-SAL/muse/blob/main/changelog/README.rst)\
  """
towncrier_changelog.number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

[tool.setuptools]
zip-safe = false
include-package-data = true
exclude-package-data."*" = ["*.c", "*.h"]
packages.find.include = ["muse*"]
packages.find.exclude = ["muse._dev*"]

[tool.setuptools_scm]
version_file = "muse/_version.py"

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
package = "muse"
filename = "CHANGELOG.rst"
directory = "changelog/"
issue_format = "`#{issue} <https://github.com/LM-SAL/muse/pull/{issue}>`__"
title_format = "{version} ({project_date})"
type = [
  { directory = "breaking", name = "Breaking Changes", showcontent = true },
  { directory = "deprecation", name = "Deprecations", showcontent = true },
  { directory = "removal", name = "Removals", showcontent = true },
  { directory = "feature", name = "New Features", showcontent = true },
  { directory = "bugfix", name = "Bug Fixes", showcontent = true },
  { directory = "doc", name = "Documentation", showcontent = true },
  { directory = "trivial", name = "Internal Changes", showcontent = true },
]

[tool.ty.src]
include = ["muse"]
exclude = [
  "muse/**/tests/**",
  "muse/conftest.py",
  "muse/_version.py",
  "muse/version.py"
]
